--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,12 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
+}
+// Modules for JavaFX
+javafx {
+	version = "15.0.1"
+	modules = [ 'javafx.controls' ]
 }
 
 repositories {
@@ -25,6 +31,9 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
+
+    //This dependency is for Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 
 application {
